[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/weapon/Barrel.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/weapon/enemy/ECGun.gd" type="Script" id=2]
[ext_resource path="res://scenes/ammo/enemy/EBullet.tscn" type="PackedScene" id=3]

[node name="ECGun" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="N90Barrel" parent="." instance=ExtResource( 1 )]
rotation = -1.5708
ammo = ExtResource( 3 )
firerate = 30.0
ammo_animation = "roundA_yellow"

[node name="N45Barrel" parent="." instance=ExtResource( 1 )]
rotation = -0.785398
ammo = ExtResource( 3 )
firerate = 30.0
ammo_animation = "roundA_yellow"

[node name="Z0Barrel" parent="." instance=ExtResource( 1 )]
ammo = ExtResource( 3 )
firerate = 30.0
ammo_animation = "roundA_yellow"

[node name="P45Barrel" parent="." instance=ExtResource( 1 )]
rotation = 0.785398
ammo = ExtResource( 3 )
firerate = 30.0
ammo_animation = "roundA_yellow"

[node name="P90Barrel" parent="." instance=ExtResource( 1 )]
rotation = 1.5708
ammo = ExtResource( 3 )
firerate = 30.0
ammo_animation = "roundA_yellow"

[node name="P135Barrel" parent="." instance=ExtResource( 1 )]
rotation = 2.35619
ammo = ExtResource( 3 )
firerate = 30.0
ammo_animation = "roundA_yellow"

[node name="P180Barrel" parent="." instance=ExtResource( 1 )]
rotation = 3.14159
ammo = ExtResource( 3 )
firerate = 30.0
ammo_animation = "roundA_yellow"

[node name="P225Barrel" parent="." instance=ExtResource( 1 )]
rotation = 3.92699
ammo = ExtResource( 3 )
firerate = 30.0
ammo_animation = "roundA_yellow"

[node name="StartShoot" type="Timer" parent="."]
one_shot = true

[node name="StopShoot" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="timeout" from="StartShoot" to="." method="on_start_shoot_timeout"]
[connection signal="timeout" from="StopShoot" to="." method="on_stop_shoot_timeout"]
